no restriction api

--- a/package.json
+++ b/package.json
@@ -54,8 +54,10 @@
     "@nguniversal/module-map-ngfactory-loader": "^7.0.2",
     "angular-swagger-ui": "^0.5.5",
     "angulartics2": "^7.2.4",
+    "body-parser": "^1.18.3",
     "core-js": "^2.6.1",
-    "express": "^4.15.2",
+    "express": "^4.16.4",
+    "html": "^1.0.0",
     "jsonwebtoken": "^8.4.0",
     "mailparser": "^2.4.3",
     "moment": "^2.23.0",
@@ -73,9 +75,9 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.11.4",
+    "@angular-devkit/build-angular": "^0.13.3",
     "@angular/cli": "^7.1.4",
-    "@angular/compiler-cli": "^7.1.4",
+    "@angular/compiler-cli": "^7.2.6",
     "@angular/language-service": "^7.1.4",
     "@types/jasmine": "^2.8.14",
     "@types/jasminewd2": "^2.0.6",
@@ -96,7 +98,7 @@
     "mongodb-memory-server": "^2.9.1",
     "node-sass": "^4.11.0",
     "nodemailer": "^4.7.0",
-    "nyc": "^13.1.0",
+    "nyc": "^13.3.0",
     "protractor": "~5.4.1",
     "supertest": "^3.3.0",
     "ts-node": "^7.0.1",
